fix: overflow flaws

--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,10 @@ h4,h6{
 aside{
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
 	color: #a3a3a3;
 	min-width: var(--aside-width);
 	background-color: #000000;
+	overflow: hidden;
 }
 
 header{
@@ -117,7 +117,6 @@ footer{
 	padding-top: 6rem;
 	padding-left: 1rem;
 	padding-right: 1rem;
-	height: 100%;
 }
 
 .generic-titles{
